--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -154,60 +154,77 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body text-black">
-                                    Łukasz Byrdy jest jednym z najwybitniejszych pianistów młodego pokolenia, który w
-                                    trakcie trwającej już ponad 10 lat kariery koncertowej, wystąpił kilkaset razy z
-                                    recitalami i koncertami w większości państw Europy, a także w USA, Kanadzie, Chinach
-                                    i Zjednoczonych Emiratach Arabskich. Urodzony w Katowicach pianista jest laureatem
-                                    ponad 20 międzynarodowych konkursów pianistycznych, w tym zdobywcą czołowych nagród
-                                    na Międzynarodowym Konkursie Pianistycznym im. Fryderyka Chopina w Pekinie oraz
-                                    Międzynarodowym Konkursie Pianistycznym w Hanowerze. Nagradzany był również na
-                                    konkursach w Szwajcarii, Włoszech, Malcie i Polsce. Po entuzjastycznie przyjętych
-                                    przez publiczność i krytyków muzycznych występach na XVII Międzynarodowym Konkursie
-                                    Pianistycznym im. Fryderyka Chopina w Warszawie, kariera pianisty wyraźnie nabrała
-                                    tempa. (…) Łukasz Byrdy jest również jednym z dziesięciu półfinalistów prestiżowego
-                                    Honens International Piano Competition w Calgary (2022), a także laureatem licznych
-                                    stypendiów i nagród artystycznych, w tym wielokrotnym stypendystą Ministra Kultury i
-                                    Dziedzictwa Narodowego oraz zdobywcą przyznawanej najwybitniejszym polskim artystom
-                                    młodego pokolenia nagrody „Młoda Polska”. Pianista był wielokrotnie zapraszany w
-                                    roli solisty i kameralisty na festiwale muzyczne w Wilnie („Christopher Festival”w
-                                    Parku Bernardyńskim), w Paryżu („Chopin au jardin” oraz „Chopin a Paris” w Oranżerii
-                                    w Parku Bagatelle), w Aspen („Music Festival and School”), w Moskwie
-                                    (Polsko-Rosyjski Festiwal Muzyczny). Wystąpił w Warszawie na festiwalach „Chopin i
-                                    Jego Europa” oraz Międzynarodowym Festiwalu Ignacego Jana Paderewskiego, na
-                                    posiadającym bogatą tradycję, odbywającym się w Ostrowie Wielkopolskim festiwalu
-                                    „Chopin w barwach jesieni”, na Festiwalu Muzyki Kameralnej „Kwartet Śląski i jego
-                                    goście” w Katowicach, na Międzynarodowym Festiwalu Chopinowskim w Dusznikach Zdroju
-                                    oraz na Festiwalu im. Jerzego Waldorffa w Radziejowicach. Artysta wielokrotnie
-                                    koncertował w największych ośrodkach muzycznych świata, prezentując swoje
-                                    interpretacje na scenach tak prestiżowych sal jak m.in. Harris Concert Hall w Aspen
-                                    (USA), Bella Concert Hall w Calgary (Kanada), Rozsa Centre w Calgary (Kanada),
-                                    Oranżeria w Parku Bagatelle w Paryżu (Francja), Aula Uniwersytetu Sapienza w Rzymie
-                                    (Włochy), Muzeum Puszkina oraz Muzeum Scriabina w Moskwie (Rosja), salach
-                                    koncertowych konserwatoriów muzycznych w Pekinie i Chengdu (Chiny) oraz Tianfu
-                                    Center w Chengdu (Chiny). Wystąpił w większości polskich filharmonii, jak również
-                                    Sali Koncertowej Narodowej Orkiestry Symfonicznej Polskiego Radia (NOSPR) w
-                                    Katowicach, Studiu Koncertowym Polskiego Radia im. W. Lutosławskiego w Warszawie,
-                                    Sali Koncertowej Europejskiego Centrum Muzyki im. Krzysztofa Pendereckiego w
-                                    Lusławicach, Sali Lustrzanej Zamku w Pszczynie, Kościele Świętego Krzyża w
-                                    Warszawie, Muzeum Fryderyka Chopina w Warszawie, Domu Urodzenia Fryderyka Chopina w
-                                    Żelazowej Woli, Zamku Królewskim w Warszawie, Sali Ratuszowej Pałacu Kultury i Nauki
-                                    w Warszawie, Teatrze Królewskim i Pałacu na Wyspie w Łazienkach Królewskich w
-                                    Warszawie.
-                                    Łukasz Byrdy jest absolwentem Universität der Künste w Berlinie i Akademii Muzycznej
-                                    im. I. J. Paderewskiego w Poznaniu. Od lat prowadzi bogatą działalność pedagogiczną,
-                                    będąc na co dzień wykładowcą katedry fortepianu w Akademii Muzycznej im. Ignacego
-                                    Jana Paderewskiego w Poznaniu. Prowadzi liczne kursy i warsztaty w Polsce i za
-                                    granicą, gdzie współpracował z m.in. Mount Royal University w Calgary, University of
-                                    Agder w Kristiansand, Estońską Akademią Muzyki i Teatru w Tallinnie, Sychuańskim
-                                    Konserwatorium Muzycznym w Chengdu. W swojej karierze pedagogicznej był kilkukrotnie
-                                    zapraszany do prowadzenia lekcji mistrzowskich w ramach prestiżowych warsztatów
-                                    muzycznych dla najzdolniejszej młodzieży z całego świata „Morningside Music Bridge”
-                                    na New England Conservatory of Music w Bostonie.
-                                    Pianista dokonywał wielokrotnie nagrań dla radia i telewizji, a jego występy
-                                    transmitowane były przez Polskie Radio, Telewizję Polską, a także Litewskie Narodowe
-                                    Radio i Telewizję, Centralną Telewizję Chińska CCTV oraz radio i telewizję
-                                    sychuańską. W 2017 roku dzięki wsparciu Fundacji Piotra Klera ukazała się
-                                    debiutancka płyta artysty z koncertami fortepianowymi F. Chopina i W. A. Mozarta.
+                                    Łukasz Byrdy to jeden z najbardziej wyrazistych pianistów młodego pokolenia –
+                                    laureat
+                                    ponad 20 międzynarodowych konkursów, koncertujący od ponad dekady na najważniejszych
+                                    scenach Europy, Ameryki i Azji. Urodzony w Katowicach artysta jest zdobywcą
+                                    czołowych
+                                    nagród na Międzynarodowym Konkursie Pianistycznym im. Fryderyka Chopina w Pekinie
+                                    oraz
+                                    na Międzynarodowym Konkursie Pianistycznym w Hanowerze. Był także nagradzany w
+                                    Szwajcarii, we Włoszech, na Malcie i w Polsce.
+                                    Po udziale w XVII Konkursie Chopinowskim w Warszawie jego kariera nabrała tempa, a
+                                    interpretacje artysty zyskały uznanie słuchaczy od Paryża po Pekin.
+                                    W 2022 roku znalazł się w gronie dziesięciu półfinalistów prestiżowego Honens
+                                    International
+                                    Piano Competition w Calgary (Kanada). Jest również laureatem licznych stypendiów i
+                                    nagród
+                                    artystycznych, m.in. wielokrotnym stypendystą Ministra Kultury i Dziedzictwa
+                                    Narodowego
+                                    oraz laureatem programu „Młoda Polska” – jednego z najważniejszych wyróżnień
+                                    przyznawanych wybitnym artystom młodego pokolenia. </br></br>
+                                    Byrdy regularnie występuje na międzynarodowych festiwalach muzycznych, takich jak:
+                                    </br>
+                                    – „Chopin i jego Europa” oraz Międzynarodowy Festiwal Paderewskiego w Warszawie,
+                                    </br>
+                                    – Festiwal „Chopin w barwach jesieni” w Ostrowie Wielkopolskim, </br>
+                                    – Festiwal im. Jerzego Waldorffa w Radziejowicach, </br>
+                                    – Festiwal „Christopher Festival” w Wilnie,</br>
+                                    – „Chopin au Jardin” i „Chopin à Paris” w Oranżerii Parku Bagatelle w Paryżu,</br>
+                                    – „Aspen Music Festival and School” (USA),</br>
+                                    – Polsko-Rosyjski Festiwal Muzyczny w Moskwie.</br></br>
+
+                                    Występował na prestiżowych scenach koncertowych świata, m.in. w Harris Concert Hall
+                                    (Aspen), Bella Concert Hall i Rozsa Centre (Calgary), Oranżerii Parku Bagatelle
+                                    (Paryż), Auli
+                                    Uniwersytetu Sapienza (Rzym), Muzeum Puszkina i Muzeum Skriabina (Moskwa),
+                                    konserwatoriach muzycznych w Pekinie i Chengdu oraz w Tianfu Center w Chengdu.
+                                    </br></br>
+
+                                    W Polsce koncertował w większości filharmonii oraz w najważniejszych salach
+                                    koncertowych,
+                                    takich jak:</br>
+                                    – Sala Koncertowa NOSPR w Katowicach,</br>
+                                    – Studio Koncertowe Polskiego Radia im. W. Lutosławskiego w Warszawie,</br>
+                                    – Europejskie Centrum Muzyki Krzysztofa Pendereckiego w Lusławicach,</br>
+                                    – Sala Lustrzana Zamku w Pszczynie,</br>
+                                    – Kościół Świętego Krzyża, Zamek Królewski, Muzeum Fryderyka Chopina, Dom
+                                    Urodzenia</br>
+                                    Chopina w Żelazowej Woli, Teatr Królewski, Pałac na Wyspie oraz Sala Ratuszowa
+                                    Pałacu</br>
+                                    Kultury i Nauki w Warszawie. </br></br>
+
+                                    Artysta ukończył studia pianistyczne w Universität der Künste w Berlinie oraz w
+                                    Akademii
+                                    Muzycznej im. I. J. Paderewskiego w Poznaniu, gdzie obecnie pełni funkcję wykładowcy
+                                    Katedry Fortepianu.
+
+                                    Prowadzi intensywną działalność pedagogiczną, regularnie prowadząc kursy
+                                    mistrzowskie w
+                                    kraju i za granicą – m.in. na Mount Royal University w Calgary, University of Agder
+                                    w
+                                    Kristiansand, Estońskiej Akademii Muzyki i Teatru w Tallinnie oraz Sychuańskim
+                                    Konserwatorium Muzycznym w Chengdu. Był także wielokrotnie zapraszany jako pedagog w
+                                    ramach renomowanego programu dla młodych talentów Morningside Music Bridge w New
+                                    England Conservatory of Music w Bostonie.
+                                    Dokonał licznych nagrań radiowych i telewizyjnych. Jego interpretacje były
+                                    transmitowane
+                                    przez Polskie Radio, Telewizję Polską, Litewskie Radio i Telewizję Narodową,
+                                    Centralną
+                                    Telewizję Chińską CCTV oraz regionalne media w Syczuanie.
+                                    W 2017 roku, dzięki wsparciu Fundacji Piotra Klera, ukazała się jego debiutancka
+                                    płyta z
+                                    koncertami fortepianowymi Fryderyka Chopina i Wolfganga Amadeusza Mozarta.
 
 
                                 </div>
