--- a/rules.html
+++ b/rules.html
@@ -113,12 +113,12 @@
             <div class="text-container">
                 <p class="text-application width-form">
                     Organized by the Calisia Arts Foundation, the 1st International Henryk Melcer Piano
-                    Competition attracted 77 pianists from several countries around the world. The
-                    competition aimed to discover and promote new talents while commemorating the
-                    legacy of Henryk Melcer, an outstanding pianist and composer who had strong ties
-                    to Kalisz for many years.
-                    The laureates of the competition performed in prestigious concert halls and
-                    participated in masterclasses conducted by the jury chairman, Łukasz Byrdy.
+                    Competition attracted as many as 77 pianists from several countries around the world. The
+                    aim of the event was to discover and promote young talents, while also commemorating
+                    Henryk Melcer – an outstanding pianist and composer closely associated with the city of
+                    Kalisz for many years. The laureates of the competition had the opportunity to perform in
+                    prestigious concert halls and to participate in masterclasses led by the chairman of the jury,
+                    Dr. Łukasz Byrdy.
                 </p>
             </div>
             <div class="width-form border-competition">
@@ -128,13 +128,13 @@
         </div>
         <div class="container-photo">
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/1-6.jpg" alt="city, kalisz, view" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/gallery1.webp" alt="city, kalisz, view" />
                 <div class="label-photo">
                     The Winners' Concert at the Vienna Klaviergalerie, winners of the competition
                 </div>
             </div>
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/2-6.JPG" alt="city, kalisz, view" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/gallery6.webp" alt="city, kalisz, view" />
                 <div class="label-photo">
                     The Winners' Concert at the H. Melcer Primary and Secondary Music School in Kalisz, Yukino Hayashi -
                     1st Prize, Category E
@@ -142,12 +142,12 @@
             </div>
 
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/3-6.jpg" alt="konkurs" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/gallery-kamila.webp" alt="konkurs" />
                 <div class="label-photo width-label">
                     The Winners' Concert at the Calisia One complex, Kamila Kloc - 2nd Prize, Category A
                 </div>
             </div>
-<!--
+            <!--
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                 <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy.jpg" alt="konkurs" />
                 <div class="label-photo">
@@ -156,7 +156,7 @@
             </div>
         -->
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/5-6.jpg" alt="konkurs" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/gallery-m-s.webp" alt="konkurs" />
                 <div class="label-photo">
                     The Winners' Concert at the Calisia One complex, competition winners - Stefano Brizzi and Maciej
                     Domagała
@@ -164,7 +164,7 @@
             </div>
 
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/6-6.jpg" alt="city, kalisz, view" />
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/gallery-filip.webp" alt="city, kalisz, view" />
                 <div class="label-photo">
 
                     The Winners' Concert at the Vienna Klaviergalerie, President of the Calisia Arts Foundation - Filip
