--- a/jury.html
+++ b/jury.html
@@ -268,53 +268,82 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body text-black">
-                            Łukasz Byrdy is one of the most outstanding pianists of the younger generation, who
-                            during
-                            his concert career spanning over 10 years, has performed several hundred times in most
-                            European countries, as well as in the USA, Canada, China, and the United Arab Emirates. Born
-                            in Katowice, he is a laureate of over 20 international piano competitions, including winning
-                            top prizes at the Fryderyk Chopin International Piano Competition in Beijing and at the
-                            International Piano Competition in Hanover. He has also been awarded at competitions in
-                            Switzerland, Italy, Malta, and Poland. Following enthusiastically received performances at
-                            the 17th Fryderyk Chopin International Piano Competition in Warsaw, his career noticeably
-                            gained momentum. Łukasz Byrdy is also one of the ten semifinalists of the prestigious Honens
-                            International Piano Competition in Calgary (2022) and a recipient of numerous scholarships
-                            and artistic awards, including multiple scholarships from the Polish Ministry of Culture and
-                            National Heritage, and the "Young Poland" award given to the most outstanding artists of the
-                            young generation. The pianist has been frequently invited as a soloist and chamber musician
-                            to music festivals in Vilnius (Christopher Festival in the Bernardine Park), Paris („Chopin
-                            au jardin” and „Chopin a Paris” at the Orangery in the Bagatelle Park), Aspen (Music
-                            Festival and School) and Moscow (Polish-Russian Music Festival). He has performed in Warsaw
-                            at the „Chopin and His Europe” festival and the Ignacy Jan Paderewski International
-                            Festival, the "Chopin in the Colors of Autumn" festival in Ostrów Wielkopolski, the
-                            "Silesian Quartet and its Guests" Chamber Music Festival in Katowice, the International
-                            Fryderyk Chopin Festival in Duszniki Zdrój and the Jerzy Waldorff Festival in Radziejowice.
-                            The artist has performed in the world's major music centers, presenting his interpretations
-                            on prestigious stages such as Harris Concert Hall in Aspen (USA), Bella Concert Hall and
-                            Rozsa Centre in Calgary (Canada), Orangery in the Bagatelle Park in Paris (France), Aula of
-                            the Sapienza University in Rome (Italy), Pushkin Museum and Scriabin Museum in Moscow
-                            (Russia), concert halls of music conservatories in Beijing and Chengdu (China) and Tianfu
-                            Center in Chengdu (China). In Poland he has performed in numerous philharmonic halls, as
-                            well as in the Concert Hall of the National Polish Radio Symphony Orchestra (NOSPR) in
-                            Katowice, the Lutosławski Polish Radio Concert Studio in Warsaw, the European Music Center
-                            in Lusławice, the Holy Cross Church in Warsaw, the Fryderyk Chopin Museum in Warsaw, the
-                            Birthplace of Fryderyk Chopin in Żelazowa Wola, the Royal Castle in Warsaw, the Royal
-                            Theater and the Palace on the Isle in the Royal Łazienki Park in Warsaw. Łukasz Byrdy
-                            graduated from the Universität der Künste in Berlin and the Ignacy Jan Paderewski Academy of
-                            Music in Poznań and is currently a faculty in the piano department of the Ignacy Jan
-                            Paderewski Academy of Music in Poznań. He conducts numerous courses and masterclasses in
-                            Poland and abroad, collaborating with, among others: Mount Royal University in Calgary, the
-                            University of Agder in Kristiansand, the Estonian Academy of Music and Theater in Tallinn
-                            and the Sichuan Conservatory of Music in Chengdu. In his pedagogical career, he has been
-                            invited several times to conduct masterclasses on Morningside Music Bridge - one of the most
-                            prestigious music summer programs for the most talented young musicians from around the
-                            world, that takes place annually at the New England Conservatory of Music in Boston.
+                            Łukasz Byrdy is one of the most distinctive pianists of the young generation – a
+                            laureate of
+                            over 20 international piano competitions, performing for more than a decade on the
+                            most
+                            important stages across Europe, the Americas, and Asia. Born in Katowice, he has won
+                            top
+                            prizes at the International Fryderyk Chopin Piano Competition in Beijing and the
+                            International
+                            Piano Competition in Hanover, and has also been awarded in Switzerland, Italy,
+                            Malta, and
+                            Poland.
+                            Following his participation in the 17th International Chopin Piano Competition in
+                            Warsaw, his
+                            career gained momentum, and his interpretations were acclaimed by audiences from
+                            Paris to
+                            Beijing.
+                            In 2022, he was selected as one of the ten semifinalists of the prestigious Honens
+                            International Piano Competition in Calgary (Canada). He is also the recipient of
+                            numerous
+                            scholarships and artistic awards, including multiple distinctions from the Polish
+                            Ministry of
+                            Culture and National Heritage and the prestigious “Młoda Polska” (Young Poland)
+                            scholarship,
+                            one of the highest honors awarded to outstanding young Polish artists. </br></br>
 
-                            Łukasz Byrdy has made numerous recordings for radio and television. His performances have
-                            been broadcast by Polish Radio, Polish Television, Lithuanian National Radio and Television,
-                            Central Chinese Television CCTV, and Sichuan Radio and Television. In 2017, with support of
-                            the Piotr Kler Foundation, his debut album with piano concertos by F. Chopin and W. A.
-                            Mozart was released.
+                            Byrdy regularly appears at international music festivals, including:</br>
+                            – Chopin and His Europe and the Paderewski International Festival in Warsaw,</br>
+                            – Chopin in the Colors of Autumn Festival in Ostrów Wielkopolski,</br>
+                            – Jerzy Waldorff Festival in Radziejowice,</br>
+                            – Christopher Festival in Vilnius,</br>
+                            – Chopin au Jardin and Chopin à Paris at the Orangery of Bagatelle Park in
+                            Paris,</br>
+                            – Aspen Music Festival and School (USA),</br>
+                            – The Polish-Russian Music Festival in Moscow.
+
+                            </br></br>
+
+                            He has performed in many of the world’s most prestigious concert halls, including:
+                            Harris Concert Hall (Aspen), Bella Concert Hall and Rozsa Centre (Calgary), Orangery
+                            of
+                            Bagatelle Park (Paris), Sapienza University Hall (Rome), Pushkin Museum and Scriabin
+                            Museum (Moscow), as well as concert halls of music conservatories in Beijing and
+                            Chengdu,
+                            and the Tianfu Center in Chengdu. </br></br>
+                            In Poland, he has performed with leading philharmonic orchestras and in renowned
+                            venues
+                            such as:</br>
+                            – NOSPR Concert Hall in Katowice,</br>
+                            – Witold Lutosławski Concert Studio of Polish Radio in Warsaw,</br>
+
+                            – Krzysztof Penderecki European Centre for Music in Lusławice,</br>
+                            – Mirror Hall of Pszczyna Castle,</br>
+                            – and numerous landmark venues in Warsaw, including the Holy Cross Church, Royal
+                            Castle,</br>
+                            Fryderyk Chopin Museum, Chopin’s Birthplace in Żelazowa Wola, Royal Theatre, Palace
+                            on</br>
+                            the Isle, and the City Hall Hall of the Palace of Culture and Science.</br>
+                            </br>
+                            He graduated from the Universität der Künste in Berlin and the I. J. Paderewski
+                            Academy of
+                            Music in Poznań, where he now serves as a professor in the Department of Piano.
+                            An active pedagogue, Byrdy regularly gives masterclasses both in Poland and abroad –
+                            including at the Mount Royal University in Calgary, University of Agder in
+                            Kristiansand, the
+                            Estonian Academy of Music and Theatre in Tallinn, and the Sichuan Conservatory of
+                            Music in
+                            Chengdu. He has also been invited on multiple occasions to teach at the prestigious
+                            Morningside Music Bridge program at the New England Conservatory of Music in Boston,
+                            working with some of the most talented young pianists from around the globe.
+                            He has made numerous radio and television recordings, and his performances have been
+                            broadcast by Polish Radio, Polish Television (TVP), Lithuanian National Radio and
+                            Television,
+                            China Central Television (CCTV), and regional stations in Sichuan.
+                            In 2017, with the support of the Piotr Kler Foundation, he released his debut album
+                            featuring
+                            piano concertos by Fryderyk Chopin and Wolfgang Amadeus Mozart.
 
 
                         </div>
