--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -112,26 +112,17 @@
             <div class="container-text-photos">
                 <div class="text-container">
                     <p class="text-application width-form">
-                        We were thrilled to invite you to the 1st Kalisz Piano Festival, which took place from October 21-23, 2024, in the beautiful concert hall of <a href="https://www.psm.kalisz.pl"
-                            class="link-google link2" target="_blank">the Henryk Melcer State
-                            Music School in Kalisz</a>.
-                        The 1st Kalisz Piano Festival was a unique event where the audience had the opportunity to enjoy performances of works from various musical eras by acclaimed
-                        pianists from Austria, Poland, and Italy. Among the invited artists were also the
-                        laureates of last year's <a href="https://calisia-arts.com/rules.html" class="link-google link2"
-                            target="_blank">1st International Henryk Melcer Piano Competition</a>, organized by the
-                        Calisia Arts
-                        Foundation.
-
-                        </br> </br>
-                        In addition to the concerts, the Festival also featured a series of lectures and piano
-                        workshops for talented youth from Kalisz and the surrounding area. These were led
-                        by <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">Prof. Manfred
-                            Wagner-Artzt</a> from the University of Music and Performing Arts
-                        Vienna, <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google link2"
-                            target="_blank">Prof. Zbigniew Raubo</a> from the Karol Szymanowski Academy of Music in
-                        Katowice and
-                        <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">Dr. Łukasz Byrdy</a>
-                        from the Ignacy Jan Paderewski Academy of Music in Poznań.
+                        The 1st Kalisz Piano Festival took place on 21–23 October 2024 in the beautiful concert hall of
+                        the Henryk Melcer State Music School (First and Second Degree) in Kalisz. This exceptional
+                        artistic event gave audiences the opportunity to enjoy performances of works from various
+                        musical eras, interpreted by acclaimed pianists from Austria, Poland, and Italy. Among the
+                        invited artists were also the laureates of the 1st International Henryk Melcer Piano
+                        Competition, organized by the Calisia Arts Foundation. The festival was accompanied by a
+                        series of lectures and piano workshops dedicated to talented young musicians from Kalisz and
+                        the surrounding region. The sessions were led by distinguished pedagogues: Prof. Manfred
+                        Wagner-Artzt from the University of Music and Performing Arts in Vienna (mdw), Prof.
+                        Zbigniew Raubo from the Karol Szymanowski Academy of Music in Katowice, and Dr. Łukasz
+                        Byrdy from the I. J. Paderewski Academy of Music in Poznań.
                     </p>
                 </div>
 
