--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -95,13 +95,13 @@
                 <h1 class="h1-team">I Kaliski Festiwal Pianistyczny</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="program.html" class="card" >
+                <a href="program.html" class="card">
                     Program
                 </a>
-                <a href="artysci.html" class="card" >
+                <a href="artysci.html" class="card">
                     Artyści
                 </a>
-                <a href="foto-festival24.html" class="card" >
+                <a href="foto-festival24.html" class="card">
                     Fotorelacja
                 </a>
 
@@ -111,23 +111,22 @@
             <div class="container-text-photos">
                 <div class="text-container">
                     <p class="text-application width-form">
-                        I Kaliskim Festiwal Pianistyczny odbył się
-                        w dniach 21-23 października 2024 roku w pięknej sali koncertowej <a href="https://https://www.psm.kalisz.pl" class="link-google link2" target="_blank">Państwowej Szkoły Muzycznej I i
-                            II stopnia im. Henryka Melcera w Kaliszu</a>.
-                        I Kaliski Festiwal Pianistyczny był wyjątkowym wydarzeniem, podczas którego publiczność
-                        miała okazję wysłuchać interpretacji utworów z różnych epok w wykonaniu utytułowanych pianistów
-                        z Austrii, Polski i Włoch. Wśród zaproszonych artystów znajdowali się także laureaci
-                        <a href="https://calisia-arts.com/polish-version-calisia-web/konkurs24.html" class="link2" target="_blank">I Międzynarodowego Konkursu Pianistycznego im. Henryka Melcera</a> zorganizowanego przez Fundację Calisia Arts.
+                        I Kaliski Festiwal Pianistyczny odbył się w dniach 21–23 października 2024 roku w pięknej sali
 
-                        </br> </br>
-                        Oprócz koncertów, w trakcie Festiwalu odbył się również cykl wykładów oraz warsztatów
-                        pianistycznych dla uzdolnionej młodzieży z Kalisza i okolic prowadzonych przez: <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">prof. Manfreda Wagner-Artzta</a> z Uniwersytetu Muzycznego w Wiedniu (mdw), a także <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2" target="_blank">prof. Zbigniewa Raubo</a> z Akademii Muzycznej im. Karola
-                        Szymanowskiego  w Katowicach i <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">dr. Łukasza Byrdy</a> z
-                        Akademii Muzycznej im. I. J. Paderewskiego w Poznaniu.
+                        koncertowej Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu. Było
+                        to wyjątkowe wydarzenie artystyczne, podczas którego publiczność miała okazję wysłuchać
+                        interpretacji dzieł z różnych epok w wykonaniu utytułowanych pianistów z Austrii, Polski i
+                        Włoch. W gronie zaproszonych artystów znaleźli się również laureaci I Międzynarodowego
+                        Konkursu Pianistycznego im. Henryka Melcera, zorganizowanego przez Fundację Calisia
+                        Arts. Festiwalowi towarzyszył cykl wykładów i warsztatów pianistycznych skierowanych do
+                        uzdolnionej młodzieży z Kalisza i regionu. Zajęcia prowadzili wybitni pedagodzy: prof. Manfred
+                        Wagner-Artzt z Uniwersytetu Muzycznego w Wiedniu (mdw), prof. Zbigniew Raubo z Akademii
+                        Muzycznej im. Karola Szymanowskiego w Katowicach oraz dr Łukasz Byrdy z Akademii
+                        Muzycznej im. Ignacego Jana Paderewskiego w Poznaniu.
 
                     </p>
                 </div>
-       
+
                 <br><br>
 
             </div>
