--- a/festival.html
+++ b/festival.html
@@ -104,6 +104,9 @@
                 <a href="festiwal24.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Festival 2024
                 </a>
+                <a href="festival25.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                    Festival 2025
+                </a>
             </div>
 
 
