--- a/festival25.html
+++ b/festival25.html
@@ -97,18 +97,18 @@
             </div>
 
             <section class="main-festiwal main2">
-                <a href="o-festiwalu25.html" class="card card2">
+                <!--<a href="o-festiwalu25.html" class="card card2">
                    About festival 2025
-                </a>
+                </a> -->
                 <a href="program25.html" class="card card2">
                     Program
                 </a>
                 <a href="artysci25.html" class="card card2">
                     Artists
                 </a>
-                <a href="foto-festival25.html" class="card card2">
+              <!--  <a href="foto-festival25.html" class="card card2">
                     Photo gallery
-                </a>
+                </a>-->
             </section>
         </section>
 
