--- a/polish-version-calisia-web/program25.html
+++ b/polish-version-calisia-web/program25.html
@@ -24,6 +24,9 @@
     <link rel="stylesheet" href="../rules.css?id=8">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 
 <body>
@@ -96,7 +99,7 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Program</h1>
             </div>
-            <div class="main-festiwal margin-bez">
+            <div class="main-festiwal margin-bez2">
                 <a href="o-festiwalu25.html" class="card card2">
                     O festiwalu 2025
                 </a>
@@ -110,19 +113,219 @@
             </div>
 
             <div class="flex-team">
-                <div class="box-1-team">
+                <div class="box-1-team box1-team-n">
                     <div class="small-class-team">
 
-                        <h1 class="h1-team-members">09.09.2025</h1>
+
                     </div>
                     <div class="team-text program-mobile">
-                        <p class="p-team program-text">
-                            <span class="gold gold-gold2">17:00</span> <br> <span class="new-gold"> Sala Koncertowa
-                                Państwowej
-                                Szkoły Muzycznej I i II stopnia im. Henryka Melcera w
-                                Kaliszu</span> <br> Tianyao Lyu <br>
-                            Jan Widlarz <br>
-                        </p>
+                        <!-- Blok: wspólna data i godzina -->
+                        <div
+                            style="max-width: 700px; background-color: #1a1a1a; color: #8B6E3E; padding: 20px; border-radius: 10px; margin: 40px auto 0 auto; line-height: 1.3;">
+
+                            <!-- Data i godzina -->
+                            <div style="margin-bottom: 25px;">
+                                <p style="
+                               font-size: 18px;
+                               color: #d4b073;
+                               font-weight: 500;
+                               letter-spacing: 0.5px;
+                               margin: 0;
+                               text-align: left;
+                             ">
+                                    09 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 17:00
+                                </p>
+                            </div>
+
+                            <!-- WYKONAWCA 1 – Tianyao Lyu -->
+                            <hr style="border-color: #8B6E3E; margin: 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Tianyao Lyu</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Fryderyk Chopin</em></li> <br>
+                                <li><em>Szczegóły wkrótce</em></li>
+                            </ul>
+
+                            <!-- WYKONAWCA 2 – Jan Widlarz -->
+                            <hr style="border-color: #8B6E3E; margin: 30px 0 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Jan Widlarz</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Fryderyk Chopin</em></li><br>
+                                <li>Preludia, Op. 28 nr 13–24</li>
+                                <li>Nokturn E-dur, Op. 62 nr 2</li>
+                                <li>Scherzo E-dur, Op. 54</li>
+                                <li>Polonez As-dur, Op. 53</li>
+                            </ul>
+
+                        </div>
+
+                        <!-- Blok: wspólna data i godzina -->
+                        <div
+                            style="max-width: 700px; background-color: #1a1a1a; color: #8B6E3E; padding: 20px; border-radius: 10px; margin: 40px auto 0 auto; line-height: 1.3;">
+
+                            <!-- Data i godzina -->
+                            <div style="margin-bottom: 25px;">
+                                <p style="
+                               font-size: 18px;
+                               color: #d4b073;
+                               font-weight: 500;
+                               letter-spacing: 0.5px;
+                               margin: 0;
+                               text-align: left;
+                             ">
+                                    10 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 18:00
+                                </p>
+                            </div>
+
+                            <!-- WYKONAWCA 1 – Tianyao Lyu -->
+                            <hr style="border-color: #8B6E3E; margin: 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Krzysztof Wierciński</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Fryderyk Chopin</em></li> <br>
+                                <li><em>Szczegóły wkrótce</em></li>
+                            </ul>
+
+                            <!-- WYKONAWCA 2 – Jan Widlarz -->
+                            <hr style="border-color: #8B6E3E; margin: 30px 0 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Zuzanna Sejbuk</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Fryderyk Chopin</em></li> <br>
+                                <li>Ballada As-dur Op. 47</li>
+                                <li>Etiuda gis-moll Op. 25 nr 6</li>
+                                <li>Nokturn G-dur Op. 37 nr 2</li>
+                                <li>Walc Es-dur Op. 18</li>
+                                <li>Polonez-fantazja As-dur Op. 61</li>
+                            </ul>
+
+                        </div>
+
+                        <!-- Blok: wspólna data i godzina -->
+                        <div
+                            style="max-width: 700px; background-color: #1a1a1a; color: #8B6E3E; padding: 20px; border-radius: 10px; margin: 40px auto 0 auto; line-height: 1.3;">
+
+                            <!-- Data i godzina -->
+                            <div style="margin-bottom: 25px;">
+                                <p style="
+                               font-size: 18px;
+                               color: #d4b073;
+                               font-weight: 500;
+                               letter-spacing: 0.5px;
+                               margin: 0;
+                               text-align: left;
+                             ">
+                                    11 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 18:00
+                                </p>
+                            </div>
+
+                            <!-- WYKONAWCA 1 – Tianyao Lyu -->
+                            <hr style="border-color: #8B6E3E; margin: 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Yehuda Prokopowicz</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Fryderyk Chopin</em></li><br>
+                                <li>Nokturn fis-moll, op. 48 nr 2</li>
+                                <li>Mazurki op. 33</li>
+                                <li>Fantazja f-moll, op. 49</li>
+                                <li>Polonez-Fantazja, op. 61</li>
+                            </ul>
+
+                            <!-- WYKONAWCA 2 – Jan Widlarz -->
+                            <hr style="border-color: #8B6E3E; margin: 30px 0 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Michał Basista</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Fryderyk Chopin</em></li> <br> 
+                                <li>Ballada g-moll op. 23</li>
+                                <li>Walc As-dur op. 34</li>
+                                <li>Sonata b-moll op. 35</li>
+                            </ul>
+
+                        </div>
+
+                        <!-- Blok: wspólna data i godzina -->
+                        <div
+                            style="max-width: 700px; background-color: #1a1a1a; color: #8B6E3E; padding: 20px; border-radius: 10px; margin: 40px auto 0 auto; line-height: 1.3;">
+
+                            <!-- Data i godzina -->
+                            <div style="margin-bottom: 25px;">
+                                <p style="
+                               font-size: 18px;
+                               color: #d4b073;
+                               font-weight: 500;
+                               letter-spacing: 0.5px;
+                               margin: 0;
+                               text-align: left;
+                             ">
+                                    12 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 18:00 &nbsp;&nbsp;|&nbsp;&nbsp;
+                                    Koncert Finałowy
+                                </p>
+                            </div>
+
+                            <!-- WYKONAWCA 1 – Tianyao Lyu -->
+                            <hr style="border-color: #8B6E3E; margin: 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Jacek Kortus</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #fff;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Fryderyk Chopin</em></li> <br>
+                                <li>Nokturn cis moll op. 27</li>
+                                <li>Walc As - dur op. 34</li>
+                                <li>Ballada F dur op. 38</li>
+                                <li>Mazurki op. 17</li>
+                                <li>Scherzo cis moll op. 39</li>
+                                <li>Polonez As dur op. 53</li>
+                            </ul>
+
+                            <!-- WYKONAWCA 2 – Jan Widlarz -->
+                            <hr style="border-color: #8B6E3E; margin: 30px 0 10px 0;">
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Łukasz Byrdy</h2>
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Maciej Kułakowski</h2>
+                            <h2 style="margin: 0 0 10px 0; font-size: 22px; color: #fff;">Zofia Olesik</h2>
+                            <p style="margin: 0 0 15px 0; font-size: 14px;">
+                                <i class="fas fa-map-marker-alt" style="color: #8B6E3E; margin-right: 5px;"></i>
+                                Sala Koncertowa Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w Kaliszu
+                            </p>
+                            <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
+                            <ul style="margin: 0; color: #ddd;">
+                                <li><em>Andrzej Panufnik</em> - Trio fortepianowe Op. 1</li> <br>
+                                <li><em>Felix Mendelssohn</em> - Trio fortepianowe c-moll Op. 66</li> <br>
+                                <li></li>
+                              
+                            </ul>
+
+
+
+                        </div>
 
 
 
@@ -135,56 +338,6 @@
 
 
 
-
-
-                <div class="box-1-team">
-                    <div class="small-class-team">
-
-                        <h1 class="h1-team-members">10.09.2025</h1>
-                    </div>
-                    <div class="team-text program-mobile">
-                        <p class="p-team program-text">
-                            <span class="gold gold-gold2">18:00</span> <br> <span class="new-gold"> Sala Koncertowa
-                                Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w
-                                Kaliszu</span> <br> Krzysztof Wierciński
-                            <br>
-                            Zuzanna Sejbuk <br>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="box-1-team">
-                    <div class="small-class-team">
-
-                        <h1 class="h1-team-members">11.09.2025</h1>
-                    </div>
-                    <div class="team-text program-mobile">
-                        <p class="p-team program-text">
-                            <span class="gold gold-gold2">18:00</span> <br> <span class="new-gold"> Sala Koncertowa
-                                Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w
-                                Kaliszu</span> <br> Yehuda Prokopowicz
-
-                            <br>
-                            Michał Basista <br>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="box-1-team">
-                    <div class="small-class-team">
-
-                        <h1 class="h1-team-members">12.09.2025</h1>
-                    </div>
-                    <div class="team-text program-mobile">
-                        <p class="p-team program-text">
-                            <span class="gold gold-gold2">18:00</span> <br> <span class="new-gold"> Sala Koncertowa
-                                Państwowej Szkoły Muzycznej I i II stopnia im. Henryka Melcera w
-                                Kaliszu</span> <br> Koncert Finałowy
-                            <br>
-                            <br>
-                        </p>
-                    </div>
-                </div>
 
 
 
