--- a/artysci25.html
+++ b/artysci25.html
@@ -89,7 +89,7 @@
                 <div class="team-h">
                     <h1 class="h1-team">Artists</h1>
                 </div>
-                <div class="main-festiwal margin-bez main3">
+                <div class="main-festiwal margin-bez3 main3">
                     <a href="o-festiwalu25.html" class="card card2">
                         About festival 2025
                     </a>
